# water_qual_

./: cgl.xlsx  chatbot_data.csv  kanch.xlsx  pyproject.toml  requirements.txt  trl.xlsx  vlp.py  vlp.xlsx  vlr.xlsx  watqual.py
Water_qual/: cgl.xlsx  chatbot.py  chatbot_data.csv  eda.py  eda2.py  kanch.xlsx  qual_calc.py  sample.py  sample2.py  trl.xlsx  vlp1.py  vlp2.py  vlr.xlsx
