[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
install_requires = [
    "openpyxl==3.1.2",
    "streamlit==1.20.0",
    "Pillow==9.2.0",
    "numpy==1.23.2",
    "pandas==1.4.3",
    "matplotlib==3.5.3",
    "seaborn==0.12.2",
    "plotly==5.10.0",
    "missingno==0.5.2",
    "scikit-learn==1.1.2",
    "validators==0.20.0",
    "pycairo"
]

[options.extras_require]
dev = [
    "nltk",
    "pip==23.1.2"
]

[options.system_packages]
cairo = ["libcairo2-dev"]
